--- a/Session-9/Assignment-9/src/ui/src/sentiment-app/src/styles.css
+++ b/Session-9/Assignment-9/src/ui/src/sentiment-app/src/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0 auto;
     max-width: 1000px;
-    background: url('assets/img/sandbox.png') no-repeat center;
+    background: no-repeat center;
     display: flex;
     flex-direction: column;
     height: 100%;
