--- a/Session-9/Assignment-9/src/ui/src/sentiment-app/src/app/translation/translation.component.html
+++ b/Session-9/Assignment-9/src/ui/src/sentiment-app/src/app/translation/translation.component.html
@@ -8,6 +8,9 @@
     <p class="lead" *ngIf="germanSentence !== ''">
       <button class="btn btn-primary" (click)="translate(germantextbox.value)">Translate</button>
     </p>
+    <div class="progress" *ngIf="isProcessing === true">
+      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+    </div>
   </div>  
   <div *ngIf="translatedText !== ''">
     <p class="lead">Translated Text :</p>
