Updated Translation Result

--- a/Session-11/Assignment-11/src/ui/src/sentiment-app/src/app/translation/translation.component.html
+++ b/Session-11/Assignment-11/src/ui/src/sentiment-app/src/app/translation/translation.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron container">
+<div class="jumbotron container-fluid">
   <h1 class="display-4">German to English Translator</h1>
   <hr class="my-4">
   <div>
