--- a/Session-14/Assignment-14/src/flaskApp/templates/home.html
+++ b/Session-14/Assignment-14/src/flaskApp/templates/home.html
@@ -3,6 +3,9 @@
 {% block body %}
     <div class='jumbotron text-center'>
         <h1>Welcome to Image Classification - Flask App</h1>
-        <p class="lead">This application is built on the Python Flask framework</p>
+        <div>
+            {% include 'includes/upload.html' %}
+        </div>
     </div>
+    
 {% endblock %}
