--- a/Session-11/Assignment-11/src/ui/src/sentiment-app/src/app/speechtotext/speechtotext.component.html
+++ b/Session-11/Assignment-11/src/ui/src/sentiment-app/src/app/speechtotext/speechtotext.component.html
@@ -3,9 +3,8 @@
   <hr class="my-4">
   <div>
     <p>Plese upload an audio file(*.wav)</p>
-    <img *ngIf="url !== ''" [src]="url" height="200"> <br/>
     <input type='file' accept=".wav" (change)="onSelectFile($event)"> <br/>
-    <button *ngIf="file !== null" class="btn btn-secondary" (click)="speechToTextCaption()">Convert to Text</button>
+    <button *ngIf="file !== null" class="btn btn-secondary" (click)="speechToText()">Convert to Text</button>
     <div class="progress" *ngIf="isProcessing === true">
       <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
     </div>
