--- a/Session-14/Assignment-14/src/flaskapp/templates/includes/upload.html
+++ b/Session-14/Assignment-14/src/flaskapp/templates/includes/upload.html
@@ -1,4 +1,5 @@
-<form action = "http://13.233.160.135/uploader" method = "POST" 
+<!--<form action = "http://13.233.160.135/uploader" method = "POST"-->
+<form action = "http://127.0.0.1:5000/uploader" method = "POST" 
    enctype = "multipart/form-data">
    <input type = "file" name = "file" />
    <input type = "submit"/>
