Update ReadMe.md, image-classification-homepage.png, and 5 more files...

--- a/Session-14/Assignment-14/src/flaskapp/templates/home.html
+++ b/Session-14/Assignment-14/src/flaskapp/templates/home.html
@@ -4,6 +4,9 @@
     <div class='jumbotron text-center'>
         <h1>Welcome to Image Classification - Flask App</h1>
         <div>
+            <h6>This App will classify any Image from the 4 classes 'Flying Bird', 'Large Quadcopter','Small Quadcopter','Winged Drone'</h6>
+        </div>
+        <div>
             {% include 'includes/upload.html' %}
         </div>
     </div>
