Update handler.py, api.service.spec.ts, and 8 more files...

--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -8,6 +8,7 @@
       <h4>File content preview</h4>
       {{filePreview}}
     </div>
+    <label>{{uploadedFile}}</label>
     <div *ngIf="filePreview !== ''">
       <button class="btn btn-primary" (click)="trainModel()">Train</button>
       <div class="progress" *ngIf="isProcessing === true">
