Dummy +ve sentiment

--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -24,8 +24,7 @@
       </p>
     </div>
   </div>
-  <!--<div *ngIf="convertedText !== ''">
-    <p class="lead">Converted Text:</p>
-    <span>{{convertedText}}</span>
-  </div>-->
+  <div *ngIf="predictedSentiment !== ''">
+    <p class="lead">Prediction: {{predictedSentiment}}</p>
+  </div>
 </div>
