--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -5,7 +5,7 @@
     <p>Plese upload an csv file(*.csv) containing a sentiment text and a sentiment</p>
     <input type='file' accept=".csv" (change)="onSelectFile($event)" class="btn btn-primary"> <br/>
     <div *ngIf="filePreview !== ''" class="content">
-      <h4><b>File Preview</b></h4>
+      <h4><b>File Preview : {{uploadedFile}}</b></h4>
       <table>
         <tr *ngFor="let item of csvRecords">
         <td *ngFor="let single of item">{{single}}</td>
