--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -1,34 +1,53 @@
-<div class="jumbotron container-fluid">
-  <h1 class="display-4">Sentiment Analysis App</h1>
-  <hr class="my-4">
-  <div>
-    <p>Plese upload an csv file(*.csv) containing a sentiment text and a sentiment</p>
-    <input type='file' accept=".csv" (change)="onSelectFile($event)" class="btn btn-secondary"> <br/>
-    <div *ngIf="filePreview !== ''" class="content">
-      <h4><b>File Preview : {{uploadedFile}}</b></h4>
-      <table>
-        <tr *ngFor="let item of csvRecords">
-        <td *ngFor="let single of item">{{single}}</td>
-        </tr>
-      </table>
-    </div>
-    <label>{{uploadedFile}}</label>
-    <div *ngIf="filePreview !== ''">
-      <button class="btn btn-primary" (click)="trainModel()">Train</button>
-      <div class="progress" *ngIf="isProcessing === true">
+<main class="container">
+  <div class="text-center">
+    <h1 class="display-4">Sentiment Analysis App</h1>
+    <hr class="my-4">
+  </div>
+    <div>
+      <p>Plese upload an csv file(*.csv) containing a sentiment text and a sentiment.
+        <br>NOTE: Currently files containing header is only supported </p>
+      <input type='file' accept=".csv" (change)="onSelectFile($event)" class="btn btn-secondary"> <br/>
+      <br>
+      <div *ngIf="filePreview !== ''" class="content">
+        <table class="table table-dark">
+          <thead>
+            <tr>
+              <th *ngFor="let header of headers">{{ header }}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let row of data">
+              <td *ngFor="let header of headers">
+                {{ row[header] }}
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <br>
+      <div class="progress" *ngIf="uploading === true">
         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
       </div>
+      <label>{{uploadedFile}}</label>
+      <div *ngIf="uploadedFile !== ''">
+        <button class="btn btn-secondary" (click)="trainModel()">Train</button>
+        <div class="progress" *ngIf="training === true">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
+        </div>
+      </div>
+      <div *ngIf="filePreview !== '' && hasTrained === true">
+        <p>Plese enter a sentence for predicting its sentiment: </p>
+        <input #sentimenttextbox type="text" [(ngModel)]="sentimentSentence" required>
+        <p class="lead">{{sentimentSentence}}</p>
+        <p class="lead" *ngIf="sentimentSentence !== ''">
+          <button class="btn btn-secondary" (click)="predictSentiment(sentimenttextbox.value)">Predict</button>
+        </p>
+        <div class="progress" *ngIf="training === true">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
+        </div>
+      </div>
     </div>
-    <div *ngIf="filePreview !== '' && isTrained === true">
-      <p>Plese enter a sentence for predicting its sentiment: </p>
-      <input #sentimenttextbox type="text" [(ngModel)]="sentimentSentence" required>
-      <p class="lead">{{sentimentSentence}}</p>
-      <p class="lead" *ngIf="sentimentSentence !== ''">
-        <button class="btn btn-secondary" (click)="predictSentiment(sentimenttextbox.value)">Predict</button>
-      </p>
+    <div *ngIf="predictedSentiment !== ''">
+      <p class="lead">Prediction: {{predictedSentiment}}</p>
     </div>
-  </div>
-  <div *ngIf="predictedSentiment !== ''">
-    <p class="lead">Prediction: {{predictedSentiment}}</p>
-  </div>
-</div>
+</main>
