Added image clasification component

--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
@@ -13,7 +13,7 @@
             <div class="card-body">
               <h5 class="card-title">Image Classification</h5>
               <p class="card-text">Predicts the class or type of an uploaded image</p>
-              <a href="sa" class="btn btn-primary">Analyze</a>
+              <a href="ic" class="btn btn-primary">Analyze</a>
             </div>
           </div>
         </div>
