--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -1,20 +1,21 @@
 <main class="container">
   <div class="text-center">
-    <h1 class="display-4">Sentiment Analysis App</h1>
+    <h1 class="display-4"><b>Sentiment Analysis App</b></h1>
     <hr class="my-4">
   </div>
     <div class="container">
       <p>Welcome to Sentiment Analysis. This app covers an end-to-end Machine Learning lifecycle comprising of below steps</p>
-      <ul class="list-group">
-        <li class="list-group-item">Upload dataset</li>
-        <li class="list-group-item">Train the model</li>
-        <li class="list-group-item">Make Prediction</li>
+      <ul>
+        <li>Upload dataset</li>
+        <li>Train the model</li>
+        <li>Make Prediction</li>
       </ul>
     </div>
     <br>
     <!--Upload-->
     <div class="container-fluid">
-      <h1 class="lead"><b>Upload Dataset</b></h1>
+      <h1>Upload Dataset</h1>
+      <hr class="my-4">
       <p>Plese upload an csv file(*.csv) containing a sentiment text and a sentiment.
         <br>NOTE: Currently files containing header is only supported
       </p>
@@ -46,7 +47,11 @@
     <!--Train-->
     <div class="container">
       <div *ngIf="uploadedFile !== ''">
-        <button class="btn btn-secondary" (click)="trainModel()">Train</button>
+        <h1>Train the Model</h1>
+        <hr class="my-4">
+        <p>
+          <button class="btn btn-secondary" (click)="trainModel()">Train</button>
+        </p>
         <div class="progress" *ngIf="training === true">
           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
         </div>
@@ -56,6 +61,8 @@
     <!--Prediction-->
     <div class="container">
       <div *ngIf="filePreview !== '' && hasTrained === true">
+        <h1>Make Prediction</h1>
+        <hr class="my-4">
         <input #sentimenttextbox type="text" [(ngModel)]="sentimentSentence" required placeholder="Enter a sentence">
         <p class="lead">{{sentimentSentence}}</p>
         <p class="lead" *ngIf="sentimentSentence !== ''">
