UI Enhancement Changed Card colors

--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
@@ -10,21 +10,21 @@
     <div class="row">
       <div class="col-sm-6">
         <!--Image Classification-->
-        <div class="card" style="width: 18rem; height: 10rem;">
+        <div class="card text-white bg-dark" style="width: 18rem; height: 10rem;">
           <div class="card-body">
             <h5 class="card-title">Image Classification</h5>
             <p class="card-text">Predicts the class or type of an uploaded image</p>
-            <a href="ic" class="btn btn-secondary">Analyze</a>
+            <a href="ic" class="btn btn-light">Analyze</a>
           </div>
         </div>
       </div>
       <div class="col-sm-4">
         <!--Sentiment Analysis-->
-        <div class="card" style="width: 18rem; height: 10rem;">
+        <div class="card text-white bg-dark" style="width: 18rem; height: 10rem;">
           <div class="card-body">
             <h5 class="card-title">Sentiment Analysis</h5>
             <p class="card-text">Predicts a sentiment to be <br>😊 / 😔</p>
-            <a href="sa" class="btn btn-secondary">Analyze</a>
+            <a href="sa" class="btn btn-light">Analyze</a>
           </div>
         </div>
       </div>
