--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/image-classification/image-classification.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/image-classification/image-classification.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container bg-light text-dark">
   <div class="text-center">
     <h1 class="display-4">Image Classification App</h1>
     <hr class="my-4">
