--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
@@ -1,11 +1,10 @@
-<meta charset="UTF-8">
 <main class="container">
   <div class="container">
     <h1 class="display-4">Welcome to AI Endeavour</h1>
-    <img class="img-responsive" src="../../assets/galaxy.jpg">
+    <img class="img-responsive img-thumbnail" src="../../assets/galaxy.jpg">
   </div>
   <br>
-  <div class="container-fluid">
+  <div class="container">
     <!-- Cards -->
     <div class="row">
       <div class="col-sm-6">
@@ -18,7 +17,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-6">
         <!--Sentiment Analysis-->
         <div class="card text-white bg-dark" style="width: 18rem; height: 10rem;">
           <div class="card-body">
