--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container bg-light text-dark">
   <div class="text-center">
     <h1 class="display-4"><b>Sentiment Analysis App</b></h1>
     <hr class="my-4">
