Added menu on all pages

--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <main class="container bg-light text-dark">
   <div class="text-center">
     <h1 class="display-4"><b>Sentiment Analysis App</b></h1>
