--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -42,7 +42,6 @@
       <div class="progress" *ngIf="uploading === true">
         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
       </div>
-      <label>{{uploadedFile}}</label>
     </div>
     <br>
     <!--Train-->
@@ -53,9 +52,11 @@
         <p>
           <button class="btn btn-secondary" (click)="trainModel()">Train</button>
         </p>
+        <br>
         <div class="progress" *ngIf="training === true">
           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
         </div>
+        <p *ngIf="filePreview !== '' && hasTrained === true">Accuracy: {{accuracy}}</p>
       </div>
     </div>
     <br>
@@ -69,7 +70,7 @@
         <p class="lead" *ngIf="sentimentSentence !== ''">
           <button class="btn btn-secondary" (click)="predictSentiment(sentimenttextbox.value)">Predict</button>
         </p>
-        <div class="progress" *ngIf="training === true">
+        <div class="progress" *ngIf="predicting === true">
           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
         </div>
       </div>
