--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -56,7 +56,7 @@
         <div class="progress" *ngIf="training === true">
           <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%; background-color:gray"></div>
         </div>
-        <p *ngIf="filePreview !== '' && hasTrained === true">Accuracy: {{accuracy}}</p>
+        <p *ngIf="filePreview !== '' && hasTrained === true">Accuracy: {{accuracy}}%</p>
       </div>
     </div>
     <br>
