Reduced the size of home page image

--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
@@ -1,13 +1,14 @@
 <main class="container">
   <div class="container">
     <h1 class="display-4">Welcome to AI Endeavour</h1>
-    <img class="img-responsive img-thumbnail" src="../../assets/galaxy.jpg">
+    <hr class="my-4">
+    <img class="img-responsive img-thumbnail" style=height:24rem; src="../../assets/galaxy.jpg">
   </div>
   <br>
   <div class="container">
     <!-- Cards -->
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <!--Image Classification-->
         <div class="card text-white bg-dark" style="width: 18rem; height: 10rem;">
           <div class="card-body">
@@ -17,7 +18,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <!--Sentiment Analysis-->
         <div class="card text-white bg-dark" style="width: 18rem; height: 10rem;">
           <div class="card-body">
