Added limit of 1000 images

--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
@@ -1,9 +1,10 @@
+
 <main class="container">
   <div class="row">
     <h1 class="display-4">Welcome to AI Endeavour</h1>
     <hr class="my-4">
    <div class="col-sm-12">
-     <img class="img-responsive img-thumbnail img-banner" style=height:24rem; src="../../assets/galaxy.jpg" alt=""></div>
+     <img class="img-responsive img-thumbnail img-banner"  src="../../assets/galaxy.jpg" alt=""></div>
   </div>
   <br>
 
