--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/app/welcome/welcome.component.html
@@ -1,43 +1,26 @@
 <main class="container">
     <h1 class="display-4 text-center">Welcome to AI Endeavour</h1>
     <hr class="my-4">
-    <carousel cellWidth='100%' autoplay=true autoplayInterval=2000 dots=true [height]="310" >
-      <div class="carousel-cell" >
-          <img class="img-banner" src="../../assets/galaxy.jpg">
+    <br>
+    <div class="container">
+      <div class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="d-flex justify-content-center">
+              <img class="img-banner" src="../../assets/galaxy.jpg">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-flex justify-content-center">
+              <img class="img-banner" src="../../assets/ic.jpg">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-flex justify-content-center">
+              <img class="img-banner" src="../../assets/sa.jpg">
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="carousel-cell">
-          <img class="img-banner" src="../../assets/ic.png">
-      </div>
-      <div class="carousel-cell">
-          <img class="img-banner" src="../../assets/sa.jpg">
-      </div>
-      <div class="carousel-cell">
-        <img class="img-banner" src="../../assets/galaxy.jpg">
-    </div>
-    </carousel>
+  </div>
 </main>
-
-
-    <!-- Cards -->
-    <!--<div class="row">
-      <div class="col-sm-3">
-
-        <div class="card text-white bg-dark" style="width: 18rem; height: 10rem;">
-          <div class="card-body">
-            <h5 class="card-title">Image Classification</h5>
-            <p class="card-text">Predicts the class or type of an uploaded image</p>
-            <a href="ic" class="btn btn-light">Analyze</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3">
-
-        <div class="card text-white bg-dark" style="width: 18rem; height: 10rem;">
-          <div class="card-body">
-            <h5 class="card-title">Sentiment Analysis</h5>
-            <p class="card-text">Predicts a sentiment to be <br>😊 / 😔</p>
-            <a href="sa" class="btn btn-light">Analyze</a>
-          </div>
-        </div>
-      </div>
-    </div>-->
